--- a/index.html
+++ b/index.html
@@ -7,107 +7,80 @@
     <title>Mesto</title>
     <link rel="stylesheet" href="./pages/index.css" />
   </head>
-
   <body class="body">
     <header class="header">
       <a class="header__logo" href="#"></a>
     </header>
-    <div class="profile">
+    <main>
+    <section class="profile">
       <div class="profile__avatar"></div>
-      <section class="profile__info">
-        <section class="profile__info-name">Жак-Ив Кусто</section>
-        <button class="profile__info-edit-button"></button>
-        <section class="profile__info-role">Исследователь океана</section>
-      </section>
-      <button class="profile__add-button"></button>
-    </div>
-    <main class="elements">
-      <div class="element">
-        <div class="element__image-container">
-          <img
-            class="element__image"
-            src="./images/1088404.jpg"
-            alt="Горная крепость"
-          />
-        </div>
-        <div class="element__symbols-container">
-          <p class="element__text">Карачаевск</p>
-          <button class="element__like-button"></button>
-        </div>
+      <div class="profile__info">
+        <h1 class="profile__info-name">Жак-Ив Кусто</h1>
+        <button class="profile__info-edit-button" type="button"></button>
+        <p class="profile__info-role">Исследователь океана</p>
       </div>
-      <div class="element">
-        <div class="element__image-container">
-          <img
-            class="element__image"
-            alt="Эльбрус"
-            src="./images/1404681.jpg"
-          />
-        </div>
+      <button class="profile__add-button" type="button"></button>
+    </section>
+    <ul class="elements">
+      <li class="element">
+          <img class="element__image" src="./images/1088404.jpg" alt="Горная крепость"/>
         <div class="element__symbols-container">
-          <p class="element__text">Гора Эльбрус</p>
-          <button class="element__like-button"></button>
+          <h2 class="element__text">Карачаевск</h2>
+          <button class="element__like-button" type="button"></button>
         </div>
-      </div>
-      <div class="element">
-        <div class="element__image-container">
-          <img class="element__image" src="./images/1556355.jpg" alt="Домбай" />
-        </div>
+      </li>
+    <li class="element">
+          <img class="element__image" alt="Эльбрус" src="./images/1404681.jpg"/>
         <div class="element__symbols-container">
-          <p class="element__text">Домбай</p>
-          <button class="element__like-button"></button>
+          <h2 class="element__text">Гора Эльбрус</h2>
+          <button class="element__like-button" type="button"></button>
         </div>
-      </div>
-      <div class="element">
-        <div class="element__image-container">
-          <img
-            class="element__image"
-            src="./images/1404681.jpg"
-            alt="Эльбрус"
-          />
-        </div>
+      </li>
+      <li class="element">
+          <img class="element__image" src="./images/1556355.jpg" alt="Домбай"/>
+
         <div class="element__symbols-container">
-          <p class="element__text">Гора Эльбрус</p>
-          <button class="element__like-button"></button>
-        </div>
-      </div>
-      <div class="element">
-        <div class="element__image-container">
-          <img class="element__image" src="./images/1556355.jpg" alt="Домбай" />
-        </div>
+          <h2 class="element__text">Домбай</h2>
+          <button class="element__like-button" type="button"></button></div>
+      </li>
+      <li class="element">
+          <img class="element__image" src="./images/1404681.jpg" alt="Эльбрус"/>
         <div class="element__symbols-container">
-          <p class="element__text">Домбай</p>
-          <button class="element__like-button"></button>
+          <h2 class="element__text">Гора Эльбрус</h2>
+          <button class="element__like-button" type="button"></button>
         </div>
-      </div>
-      <div class="element">
-        <div class="element__image-container">
-          <img
-            alt="Горная крепость"
-            class="element__image"
-            src="./images/1088404.jpg"
-          />
-        </div>
+      </li>
+      <li class="element">
+          <img class="element__image" src="./images/1556355.jpg" alt="Домбай"/>
+
         <div class="element__symbols-container">
-          <p class="element__text">Карачаево-Черкессия</p>
-          <button class="element__like-button"></button>
+          <h2 class="element__text">Домбай</h2>
+          <button class="element__like-button" type="button"></button></div>
+      </li>
+      <li class="element">
+          <img alt="Горная крепость" class="element__image" src="./images/1088404.jpg"/>
+        <div class="element__symbols-container">
+          <h2 class="element__text">Карачаево-Черкессия</h2>
+          <button class="element__like-button" type="button"></button>
         </div>
-      </div>
+      </li>
+    </ul>
     </main>
     <footer class="footer">
-      <h1 class="footer__copyright">&#169; 2020 Mesto Russia</h1>
+      <p class="footer__copyright">&#169; 2020 Mesto Russia</p>
     </footer>
     <!--Pop-up-->
-    <section class="pop-up">
+    <div class="pop-up">
       <div class="pop-up__window">
-        <button class="pop-up__close-icon"></button>
+        <button class="pop-up__close-icon" type="button"></button>
         <h2 class="pop-up__title">Редактировать профиль</h2>
-        <div class="pop-up__input">
-          <input type="text" placeholder="" class="pop-up__input-name" />
-          <input type="text" placeholder="" class="pop-up__input-role" />
+        <form class="pop-up__input-form" name="pop-up__input-form">
+          <input type="text" placeholder="" class="pop-up__input-field pop-up__input-field_type_name"/>
+          <input type="text" placeholder="" class="pop-up__input-field pop-up__input-field_type_role"/>
           <button class="pop-up__input-save" type="submit">Сохранить</button>
-        </div>
+        </form>
       </div>
-    </section>
+    </div>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
