--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
     </header>
     <main>
     <section class="profile">
-      <div class="profile__avatar"></div>
+      <img class="profile__avatar" alt="Фото пользователя" src="./images/userpic__Jacques-Yves Cousteau.jpg">
       <div class="profile__info">
         <h1 class="profile__info-name">Жак-Ив Кусто</h1>
-        <button class="profile__info-edit-button" type="button"></button>
+        <button class="profile__edit-button" type="button"></button>
         <p class="profile__info-role">Исследователь океана</p>
       </div>
       <button class="profile__add-button" type="button"></button>
     </section>
+    <section>
     <ul class="elements">
       <li class="element">
           <img class="element__image" src="./images/1088404.jpg" alt="Горная крепость"/>
@@ -64,7 +65,8 @@
           <button class="element__like-button" type="button"></button>
         </div>
       </li>
-    </ul>
+      </ul>>
+    </section>
     </main>
     <footer class="footer">
       <p class="footer__copyright">&#169; 2020 Mesto Russia</p>
