--- a/index.html
+++ b/index.html
@@ -22,50 +22,50 @@
       <button class="profile__add-button" type="button"></button>
     </section>
     <section>
-    <ul class="elements">
-      <li class="element">
+    <ul class="content">
+      <li class="content__element">
           <img class="element__image" src="./images/1088404.jpg" alt="Горная крепость"/>
         <div class="element__symbols-container">
           <h2 class="element__text">Карачаевск</h2>
           <button class="element__like-button" type="button"></button>
         </div>
       </li>
-    <li class="element">
+    <li class="content__element">
           <img class="element__image" alt="Эльбрус" src="./images/1404681.jpg"/>
         <div class="element__symbols-container">
           <h2 class="element__text">Гора Эльбрус</h2>
           <button class="element__like-button" type="button"></button>
         </div>
       </li>
-      <li class="element">
+      <li class="content__element">
           <img class="element__image" src="./images/1556355.jpg" alt="Домбай"/>
 
         <div class="element__symbols-container">
           <h2 class="element__text">Домбай</h2>
           <button class="element__like-button" type="button"></button></div>
       </li>
-      <li class="element">
+      <li class="content__element">
           <img class="element__image" src="./images/1404681.jpg" alt="Эльбрус"/>
         <div class="element__symbols-container">
           <h2 class="element__text">Гора Эльбрус</h2>
           <button class="element__like-button" type="button"></button>
         </div>
       </li>
-      <li class="element">
+      <li class="content__element">
           <img class="element__image" src="./images/1556355.jpg" alt="Домбай"/>
 
         <div class="element__symbols-container">
           <h2 class="element__text">Домбай</h2>
           <button class="element__like-button" type="button"></button></div>
       </li>
-      <li class="element">
+      <li class="content__element">
           <img alt="Горная крепость" class="element__image" src="./images/1088404.jpg"/>
         <div class="element__symbols-container">
           <h2 class="element__text">Карачаево-Черкессия</h2>
           <button class="element__like-button" type="button"></button>
         </div>
       </li>
-      </ul>>
+      </ul>
     </section>
     </main>
     <footer class="footer">
