--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     <main>
     <section class="profile">
-      <img class="profile__avatar" alt="Фото пользователя" src="./images/userpic__Jacques-Yves Cousteau.jpg">
+      <img class="profile__avatar" alt="Фото пользователя" src="./images/userpic__Jacques-Yves_Cousteau.jpg">
       <div class="profile__info">
         <h1 class="profile__info-name">Жак-Ив Кусто</h1>
         <button class="profile__edit-button" type="button"></button>
