--- a/index.html
+++ b/index.html
@@ -24,45 +24,45 @@
     <section>
     <ul class="content">
       <li class="content__element">
-          <img class="element__image" src="./images/1088404.jpg" alt="Горная крепость"/>
-        <div class="element__symbols-container">
-          <h2 class="element__text">Карачаевск</h2>
-          <button class="element__like-button" type="button"></button>
+          <img class="content__element-image" src="./images/1088404.jpg" alt="Горная крепость"/>
+        <div class="content__element-symbols-container">
+          <h2 class="content__element-text">Карачаевск</h2>
+          <button class="content__element-like-button" type="button"></button>
         </div>
       </li>
     <li class="content__element">
-          <img class="element__image" alt="Эльбрус" src="./images/1404681.jpg"/>
-        <div class="element__symbols-container">
-          <h2 class="element__text">Гора Эльбрус</h2>
-          <button class="element__like-button" type="button"></button>
+          <img class="content__element-image" alt="Эльбрус" src="./images/1404681.jpg"/>
+        <div class="content__element-symbols-container">
+          <h2 class="content__element-text">Гора Эльбрус</h2>
+          <button class="content__element-like-button" type="button"></button>
         </div>
       </li>
       <li class="content__element">
-          <img class="element__image" src="./images/1556355.jpg" alt="Домбай"/>
+          <img class="content__element-image" src="./images/1556355.jpg" alt="Домбай"/>
 
-        <div class="element__symbols-container">
-          <h2 class="element__text">Домбай</h2>
-          <button class="element__like-button" type="button"></button></div>
+        <div class="content__element-symbols-container">
+          <h2 class="content__element-text">Домбай</h2>
+          <button class="content__element-like-button" type="button"></button></div>
       </li>
       <li class="content__element">
-          <img class="element__image" src="./images/1404681.jpg" alt="Эльбрус"/>
-        <div class="element__symbols-container">
-          <h2 class="element__text">Гора Эльбрус</h2>
-          <button class="element__like-button" type="button"></button>
+          <img class="content__element-image" src="./images/1404681.jpg" alt="Эльбрус"/>
+        <div class="content__element-symbols-container">
+          <h2 class="content__element-text">Гора Эльбрус</h2>
+          <button class="content__element-like-button" type="button"></button>
         </div>
       </li>
       <li class="content__element">
-          <img class="element__image" src="./images/1556355.jpg" alt="Домбай"/>
+          <img class="content__element-image" src="./images/1556355.jpg" alt="Домбай"/>
 
-        <div class="element__symbols-container">
-          <h2 class="element__text">Домбай</h2>
-          <button class="element__like-button" type="button"></button></div>
+        <div class="content__element-symbols-container">
+          <h2 class="content__element-text">Домбай</h2>
+          <button class="content__element-like-button" type="button"></button></div>
       </li>
       <li class="content__element">
-          <img alt="Горная крепость" class="element__image" src="./images/1088404.jpg"/>
-        <div class="element__symbols-container">
-          <h2 class="element__text">Карачаево-Черкессия</h2>
-          <button class="element__like-button" type="button"></button>
+          <img alt="Горная крепость" class="content__element-image" src="./images/1088404.jpg"/>
+        <div class="content__element-symbols-container">
+          <h2 class="content__element-text">Карачаево-Черкессия</h2>
+          <button class="content__element-like-button" type="button"></button>
         </div>
       </li>
       </ul>
