--- a/index.html
+++ b/index.html
@@ -12,61 +12,109 @@
       <a class="header__logo" href="#"></a>
     </header>
     <main>
-    <section class="profile">
-      <img class="profile__avatar" alt="Фото пользователя" src="./images/userpic__Jacques-Yves_Cousteau.jpg">
-      <div class="profile__info">
-        <h1 class="profile__info-name">Жак-Ив Кусто</h1>
-        <button class="profile__edit-button" type="button"></button>
-        <p class="profile__info-role">Исследователь океана</p>
-      </div>
-      <button class="profile__add-button" type="button"></button>
-    </section>
-    <section>
-    <ul class="content">
-      <li class="content__element">
-          <img class="content__element-image" src="./images/1088404.jpg" alt="Горная крепость"/>
-        <div class="content__element-symbols-container">
-          <h2 class="content__element-text">Карачаевск</h2>
-          <button class="content__element-like-button" type="button"></button>
+      <section class="profile">
+        <img
+          class="profile__avatar"
+          alt="Фото пользователя"
+          src="./images/userpic__Jacques-Yves_Cousteau.jpg"
+        />
+        <div class="profile__info">
+          <h1 class="profile__info-name">Жак-Ив Кусто</h1>
+          <button class="profile__edit-button" type="button"></button>
+          <p class="profile__info-role">Исследователь океана</p>
         </div>
-      </li>
-    <li class="content__element">
-          <img class="content__element-image" alt="Эльбрус" src="./images/1404681.jpg"/>
-        <div class="content__element-symbols-container">
-          <h2 class="content__element-text">Гора Эльбрус</h2>
-          <button class="content__element-like-button" type="button"></button>
-        </div>
-      </li>
-      <li class="content__element">
-          <img class="content__element-image" src="./images/1556355.jpg" alt="Домбай"/>
+        <button class="profile__add-button" type="button"></button>
+      </section>
+      <section>
+        <ul class="content">
+          <li class="content__element">
+            <img
+              class="content__element-image"
+              src="./images/1088404.jpg"
+              alt="Горная крепость"
+            />
+            <div class="content__element-symbols-container">
+              <h2 class="content__element-text">Карачаевск</h2>
+              <button
+                class="content__element-like-button"
+                type="button"
+              ></button>
+            </div>
+          </li>
+          <li class="content__element">
+            <img
+              class="content__element-image"
+              alt="Эльбрус"
+              src="./images/1404681.jpg"
+            />
+            <div class="content__element-symbols-container">
+              <h2 class="content__element-text">Гора Эльбрус</h2>
+              <button
+                class="content__element-like-button"
+                type="button"
+              ></button>
+            </div>
+          </li>
+          <li class="content__element">
+            <img
+              class="content__element-image"
+              src="./images/1556355.jpg"
+              alt="Домбай"
+            />
 
-        <div class="content__element-symbols-container">
-          <h2 class="content__element-text">Домбай</h2>
-          <button class="content__element-like-button" type="button"></button></div>
-      </li>
-      <li class="content__element">
-          <img class="content__element-image" src="./images/1404681.jpg" alt="Эльбрус"/>
-        <div class="content__element-symbols-container">
-          <h2 class="content__element-text">Гора Эльбрус</h2>
-          <button class="content__element-like-button" type="button"></button>
-        </div>
-      </li>
-      <li class="content__element">
-          <img class="content__element-image" src="./images/1556355.jpg" alt="Домбай"/>
+            <div class="content__element-symbols-container">
+              <h2 class="content__element-text">Домбай</h2>
+              <button
+                class="content__element-like-button"
+                type="button"
+              ></button>
+            </div>
+          </li>
+          <li class="content__element">
+            <img
+              class="content__element-image"
+              src="./images/1404681.jpg"
+              alt="Эльбрус"
+            />
+            <div class="content__element-symbols-container">
+              <h2 class="content__element-text">Гора Эльбрус</h2>
+              <button
+                class="content__element-like-button"
+                type="button"
+              ></button>
+            </div>
+          </li>
+          <li class="content__element">
+            <img
+              class="content__element-image"
+              src="./images/1556355.jpg"
+              alt="Домбай"
+            />
 
-        <div class="content__element-symbols-container">
-          <h2 class="content__element-text">Домбай</h2>
-          <button class="content__element-like-button" type="button"></button></div>
-      </li>
-      <li class="content__element">
-          <img alt="Горная крепость" class="content__element-image" src="./images/1088404.jpg"/>
-        <div class="content__element-symbols-container">
-          <h2 class="content__element-text">Карачаево-Черкессия</h2>
-          <button class="content__element-like-button" type="button"></button>
-        </div>
-      </li>
-      </ul>
-    </section>
+            <div class="content__element-symbols-container">
+              <h2 class="content__element-text">Домбай</h2>
+              <button
+                class="content__element-like-button"
+                type="button"
+              ></button>
+            </div>
+          </li>
+          <li class="content__element">
+            <img
+              alt="Горная крепость"
+              class="content__element-image"
+              src="./images/1088404.jpg"
+            />
+            <div class="content__element-symbols-container">
+              <h2 class="content__element-text">Карачаево-Черкессия</h2>
+              <button
+                class="content__element-like-button"
+                type="button"
+              ></button>
+            </div>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer class="footer">
       <p class="footer__copyright">&#169; 2020 Mesto Russia</p>
@@ -77,8 +125,16 @@
         <button class="pop-up__close-icon" type="button"></button>
         <h2 class="pop-up__title">Редактировать профиль</h2>
         <form class="pop-up__input-form" name="pop-up__input-form">
-          <input type="text" placeholder="" class="pop-up__input-field pop-up__input-field_type_name"/>
-          <input type="text" placeholder="" class="pop-up__input-field pop-up__input-field_type_role"/>
+          <input
+            type="text"
+            placeholder=""
+            class="pop-up__input-field pop-up__input-field_type_name"
+          />
+          <input
+            type="text"
+            placeholder=""
+            class="pop-up__input-field pop-up__input-field_type_role"
+          />
           <button class="pop-up__input-save" type="submit">Сохранить</button>
         </form>
       </div>
