delete button added

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             />
 
             <div class="content__element-symbols-container">
-              <h2 class="content__element-text">Домбай</h2>
+              <!--<h2 class="content__element-text">Домбай</h2>-->
               <button
                 class="content__element-like-button"
                 type="button"
