create content by JS

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <button class="profile__add-button" type="button"></button>
       </section>
       <section>
-        <ul class="content">
-          <li class="content__element">
+        <ul class='content'>
+          <!--<li class="content__element">
             <button class="content__element-delete-button" type="button"></button>
             <img
               class="content__element-image"
@@ -118,7 +118,7 @@
                 type="button"
               ></button>
             </div>
-          </li>
+          </li>-->
         </ul>
       </section>
     </main>
