--- a/index.html
+++ b/index.html
@@ -144,6 +144,30 @@
           <button class="pop-up__input-save" type="submit">Сохранить</button>
         </form>
       </div>
+    </div>
+
+<!--Pop-up__place-->
+
+<div class="pop-up__type_place">
+  <div class="pop-up__window_place">
+    <button class="pop-up__close-icon_place" type="button"></button>
+    <h2 class="pop-up__title_place">Новое место</h2>
+    <form class="pop-up__input-form_place" name="pop-up__input-form">
+      <input
+        type="text"
+        placeholder="Название"
+        class="pop-up__input-field pop-up__input-field_type_place"
+      />
+      <input
+        type="text"
+        placeholder="Ссылка на картинку"
+        class="pop-up__input-field pop-up__input-field_type_link"
+      />
+      <button class="pop-up__input-save_place" type="submit">Сохранить</button>
+    </form>
+  </div>
+</div>
+
     <script src="./scripts/index.js"></script>
     <template>
       const initialCards = [
