place add form by js

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
 <div class="pop-up__type_place">
   <div class="pop-up__window_place">
-    <button class="pop-up__close-icon_place" type="button"></button>
+    <button class="pop-up__close-icon pop-up__close-icon_place" type="button"></button>
     <h2 class="pop-up__title_place">Новое место</h2>
     <form class="pop-up__input-form_place" name="pop-up__input-form">
       <input
