create content by JS

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header">
       <a class="header__logo" href="#"></a>
     </header>
-    <main>
+    <main class="main">
       <section class="profile">
         <img
           class="profile__avatar"
@@ -168,7 +168,7 @@
 </div>
 
     <script src="./scripts/index.js"></script>
-    <template class="template">
+    <template id="template">
       <li class="content__element">
         <button class="content__element-delete-button" type="button"></button>
         <img alt="Одно из любимых мест" class="content__element-image" src=""/>
